# outloud

./: INSTALL_WITH_CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-03-06-outloud-v02-design.md
src/outloud/: __init__.py  audio.py  cli.py  config.py  stt.py  tui.py
src/outloud/providers/: __init__.py  gemini.py  kitten.py  openai.py
src/readthis/: __init__.py  cli.py  engine.py  tui.py
