[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readthis-tts"
version = "0.1.0"
description = "Beautiful TUI for text-to-speech via Google Gemini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Bash", email = "bacharyehya@gmail.com" }]
keywords = ["tts", "text-to-speech", "gemini", "tui", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "aiohttp>=3.9",
    "textual>=1.0",
]

[project.scripts]
readthis = "readthis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/readthis"]

[project.urls]
Homepage = "https://github.com/bacharyehya/readthis"
Repository = "https://github.com/bacharyehya/readthis"
