[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outloud-tts"
version = "0.3.0"
description = "Beautiful TUI for text-to-speech. Gemini, OpenAI, or local. One command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Bash", email = "bacharyehya@gmail.com" }]
keywords = ["tts", "text-to-speech", "gemini", "openai", "tui", "terminal", "kittentts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "aiohttp>=3.9",
    "textual>=1.0",
]

[project.optional-dependencies]
local = [
    "kittentts>=0.8",
    "onnxruntime",
    "numpy",
    "soundfile",
]

[project.scripts]
outloud = "outloud.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/outloud"]

[project.urls]
Homepage = "https://github.com/bacharyehya/outloud"
Repository = "https://github.com/bacharyehya/outloud"
"Buy Me a Coffee" = "https://buymeacoffee.com/bash"
